# ann-dataset

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: lib.rs
src/data/: dataset.rs  in_memory_dataset.rs  mod.rs  types.rs
src/io/: mod.rs
src/types/: ground_truth.rs  mod.rs  point_set.rs  query_set.rs
